@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.program.hubhug.maze3" provider-name="The[COLOR tan]Highway[/COLOR]"
-       version="0.1.5" name="HUB-HUG Dungeon Crawler">
+       version="0.1.6" name="HUB-HUG Dungeon Crawler">
   <requires>
   	<import addon="xbmc.python" version="2.1.0" />
   	<import addon="script.module.addon.common"  />
