@@ -1,3 +1,6 @@
+[B]Version 0.1.6[/B]
+- Fixed Left/Right movement of mobs.
+
 [B]Version 0.1.5[/B]
 - Facing Directions for SOME of the USER graphics.
 - More Monster Graphics.
